# bzt_osboot

./: Makefile  README.md  boot.asm
asm/: Makefile  program.asm  program.elf
c/bzt/elf/: Makefile  program.c  program.elf
c/bzt/noptr/: Makefile  program.c  program.elf
c/bzt/pe/: Makefile  program.c
c/ritzingerp/: .gitignore  README.md  TimerToVideomem.sln
c/ritzingerp/TimerToVideomem/: TimerToVideomem.cpp  TimerToVideomem.vcxproj  TimerToVideomem.vcxproj.filters
csharp/adams85/: .editorconfig  README.md  csharp-sysprog-poc.sln  run.cmd
csharp/adams85/src/: Program.cs  Runtime.cs  StdLib.cs  VgaBuffer.cs  csharp-sysprog-poc.csproj
go/zarmin/: .gitignore  Makefile  README.md  bootelf.json  go.mod  link.ld  program.elf  program.go
nim/zarmin/: .gitignore  Makefile  README.md  panicoverride.nim  program.nim
pas/chainq/: Makefile
rust/atipls/: Cargo.toml  Makefile  linker.ld  program.elf
rust/atipls/.cargo/: config.toml
rust/atipls/src/: main.rs
rust/ritzingerp/: Cargo.toml  Makefile  README.md  timer_to_videomem.elf
rust/ritzingerp/src/: main.rs
rust/ritzingerp/timer_to_videomem/: Cargo.toml  linker.ld
rust/ritzingerp/timer_to_videomem/.cargo/: config.toml
rust/ritzingerp/timer_to_videomem/src/: main.rs
swift/zarmin/: .gitignore  Makefile  README.md  program.swift
swift/zarmin/efistuff/: defs.h  module.modulemap
zig/enpassant/: Makefile  program.zig
zig/enpassant/noptr/: Makefile  link.ld  program.zig
